# MachineLearningYSU2025

./: README.md  autograd_tutorial.ipynb  california_housing.ipynb  iris_logreg.ipynb  main.py  mnist_mlp.ipynb  mytorch.py  pyproject.toml
